// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render correct size when size is: heading 1`] = `
<span
  class="Text__root Text__heading Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      3.5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__heading Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: heading and rating text is shown 1`] = `
<span
  class="Text__root Text__heading Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      4 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__heading Rating__star"
      >
        mock svg
      </span>
      <span
        class="Rating__textRating"
      >
        4.0
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: headline 1`] = `
<span
  class="Text__root Text__headline Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      3.5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__headline Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: headline and rating text is shown 1`] = `
<span
  class="Text__root Text__headline Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      4 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__headline Rating__star"
      >
        mock svg
      </span>
      <span
        class="Rating__textRating"
      >
        4.0
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: hero 1`] = `
<span
  class="Text__root Text__hero Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      3.5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__hero Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: hero and rating text is shown 1`] = `
<span
  class="Text__root Text__hero Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      4 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__hero Rating__star"
      >
        mock svg
      </span>
      <span
        class="Rating__textRating"
      >
        4.0
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 0 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      0 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 2.74 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      2.74 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 2.75 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      2.75 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 3.74 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      3.74 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 3.75 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      3.75 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 5 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with className 1`] = `
<span
  class="Text__root root-class-name Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with description 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Rating__textRating"
      >
        5.0 overall rating from...
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with description as a component 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Rating__textRating"
      >
        5.0 
        <span>
          overall rating
        </span>
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with starClassName 1`] = `
<span
  class="Text__root Text__standard Text__raw Text__baseline"
>
  <span
    class="Regular__root"
  >
    <span
      class="ScreenReaderOnly__root"
    >
      5 out of 5
    </span>
    <span
      class="Rating__rating"
    >
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
      <span
        class="Icon__root StarIcon___large StarIcon__filled StarIcon__standard Rating__star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;
